--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cd client && npm run build",
     "install-client" : "cd client && npm install ", 
-    "heroku-postbuild" :"npm run install-client && npm run buil",
+    "heroku-postbuild" :"npm run install-client && npm run build",
     "start": "node serv_index.js",
     "dev": "nodemon serv_index.js"
   },
